[package]
name = "sched-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-wait = { version = "1.1.0", default-features = false }
crossbeam = { version = "0.8.2", features = ["crossbeam-deque"] }
hwlocality = { git = "https://github.com/HadrienG2/hwlocality.git" }
itertools = "0.11"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
pessimize = { git = "https://github.com/HadrienG2/pessimize.git" }
proptest = "1.3"
rayon = { version = "1.8.0", default-features = false }

[lib]
bench = false

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
debug = "line-tables-only"
codegen-units = 1
lto = "thin"
