[package]
name = "viscose"
description = "Experimental demonstrator of locality-aware scheduling in rayon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-wait = { version = "1.1.0", default-features = false }
criterion = { version = "0.5.1", default-features = false }
crossbeam = { version = "0.8.2", features = ["crossbeam-deque"] }
hwlocality = { git = "https://github.com/HadrienG2/hwlocality.git", features = ["hwloc-2_2_0"] }
iterator_ilp = "2.0"
itertools = "0.11"
pessimize = { git = "https://github.com/HadrienG2/pessimize.git" }
rayon = { version = "1.8.0", default-features = false }

[dev-dependencies]
proptest = "1.3"

[lib]
bench = false

[[bench]]
name = "flags"
harness = false

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "square"
harness = false

[[bench]]
name = "sum"
harness = false

[[bench]]
name = "norm_sqr"
harness = false

[profile.bench]
debug = "line-tables-only"
codegen-units = 1
lto = "thin"
